--- a/never_sinkhole_wildcards.yml
+++ b/never_sinkhole_wildcards.yml
@@ -103,6 +103,7 @@ Security Sites and Antiviruses and other NSM:
                 'tippingpoint.com',
                 'paloaltonetworks.com',
                 'sucuri.net',
+                'threatcrowd.org',
               ]
 
 General Hosting that you may not want to block:
